<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">
	
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="#FFFFFF"
		android:orientation="horizontal">
			<Button android:id="@+id/Button_user_message_pre"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:layout_weight="1"
				android:text="@string/prev"/>
			<Button android:id="@+id/Button_user_message_more"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:layout_weight="1"
				android:text="@string/next" />
			<Button android:id="@+id/Button_user_message_close"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:layout_weight="1"
				android:text="@string/close" />
	
	</LinearLayout>

	<ListView android:id="@+id/listView_user_status_favorite"
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent"/>

</LinearLayout>