<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:orientation="vertical">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:gravity="center_vertical">

		<TextView android:layout_height="wrap_content"
			android:text="@string/layout_dialog_add_translate_from"
			android:textColor="@color/white_gray" android:layout_marginLeft="10dip"
			android:layout_marginTop="5dip" android:gravity="center" android:layout_width="70dip" android:textSize="18sp"/>
		<Spinner android:id="@+id/Spinner_language_from"
			android:layout_height="wrap_content"
			android:layout_marginRight="10dip" android:layout_width="150dip"/>

	</LinearLayout>

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">

		<TextView android:layout_height="wrap_content"
			android:text="@string/layout_dialog_add_translate_to"
			android:textColor="@color/white_gray" android:layout_marginLeft="10dip"
			android:layout_marginTop="5dip" android:gravity="center" android:textSize="18sp" android:layout_width="70dip"/>
		<Spinner android:id="@+id/Spinner_language_to"
			android:layout_height="wrap_content"
			android:layout_marginRight="10dip" android:layout_width="150dip"/>

	</LinearLayout>

 <LinearLayout android:id="@+id/LinearLayout01"
		android:layout_below="@id/cancelButton" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginTop="30dip" 
		android:background="#cccccc" android:orientation="horizontal">

			<Button android:id="@+id/okButton" android:layout_width="100dip"
				android:layout_height="wrap_content" android:text="@string/ok"
				android:layout_weight="1"/>

			<Button android:text="@string/cancel" android:id="@+id/cancelButton"
				android:layout_width="100dip" android:layout_height="wrap_content"
				android:layout_weight="1">
			</Button>
	</LinearLayout>



</LinearLayout>
