<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/ScrollView01"
	android:layout_width="wrap_content" android:layout_height="wrap_content"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:orientation="vertical">
		<TextView android:text="@string/layout_dialog_add_translate_uid" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginLeft="20px"
			android:layout_marginRight="20px"></TextView>
		<EditText android:layout_height="wrap_content"
			android:id="@+id/uid_translate" android:capitalize="none" android:layout_marginLeft="20dip" android:layout_marginRight="20dip" android:layout_width="150dip"></EditText>
		<TextView android:text="@string/layout_dialog_add_translate_from" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginLeft="20px"
			android:layout_marginRight="20px"></TextView>

		<Spinner android:id="@+id/Spinner_setting_from" android:layout_height="wrap_content" android:layout_marginLeft="20dip" android:layout_width="150dip"></Spinner>
		<TextView android:text="@string/layout_dialog_add_translate_to" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginLeft="20px"
			android:layout_marginRight="20px"></TextView>
		<Spinner android:id="@+id/Spinner_setting_to" android:layout_height="wrap_content" android:layout_width="150dip" android:layout_marginLeft="20dip"></Spinner>
</LinearLayout>
</ScrollView>