<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:id="@+id/ScrollView01" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent" 
	xmlns:android="http://schemas.android.com/apk/res/android">

	<LinearLayout android:id="@+id/LinearLayout01" 
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent" 
		xmlns:android="http://schemas.android.com/apk/res/android" 
		android:orientation="vertical">

		<RelativeLayout android:id="@+id/RelativeLayout01" 
			android:layout_width="fill_parent" 
			android:layout_height="80dip" 
			android:layout_marginTop="10dip">

			<ImageView android:id="@+id/ImageView01" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:layout_centerInParent="true" 
				android:src="@drawable/logo" />

		</RelativeLayout>
		
		<LinearLayout android:id="@+id/LinearLayout02" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent" 
			android:paddingLeft="40dip">

			<TextView android:id="@+id/TextView01" 
				android:layout_height="fill_parent" 
				android:layout_width="wrap_content" 
				android:text="@string/activity_login_selectservice" 
				android:textStyle="bold" 
				android:layout_marginTop="10dip" />

		</LinearLayout>

		<LinearLayout android:id="@+id/LinearLayout03" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent" 
			android:paddingLeft="40dip" 
			android:paddingRight="40dip">

			<Spinner android:id="@+id/selectServiceSpinner"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"  />
		
		</LinearLayout>

	<LinearLayout android:id="@+id/LinearLayout04" 
		android:paddingLeft="40dip" 
		android:paddingRight="40dip" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">

	</LinearLayout>

	<LinearLayout android:id="@+id/LinearLayout05" 
		android:layout_height="wrap_content" 
		android:paddingLeft="40dip" 
		android:paddingRight="40dip" 
		android:layout_width="fill_parent" 
		android:orientation="vertical">

		<TextView android:id="@+id/spinner_id_text" 
			android:layout_width="wrap_content" 
			android:textStyle="bold" 
			android:layout_x="44dip" 
			android:layout_height="wrap_content" 
			android:layout_y="190dip" 
			android:text="@string/activity_login_selectloginname" 
			android:layout_marginTop="10dip" />
			
			
			<Spinner android:id="@+id/selectUserSpinner"
				android:layout_height="wrap_content" 
				android:layout_width="fill_parent"  />
				
				<RelativeLayout android:id="@+id/RelativeLayout03" 
					android:layout_height="wrap_content" 
					android:layout_width="fill_parent" 
					android:layout_marginTop="10dip">
					
					<Button android:id="@+id/addAccountButton"
						android:layout_width="wrap_content" 
						android:layout_height="wrap_content" 
						android:text="@string/activity_login_addaccount" 
						android:layout_centerInParent="true" />
						
				</RelativeLayout>
	



		</LinearLayout>
		<RelativeLayout android:id="@+id/RelativeLayout02" 
				android:layout_width="fill_parent" 
				android:layout_height="65dip" 
				android:layout_marginTop="20dip">
			<ImageButton android:id="@+id/loginButton" 
				android:layout_width="150dip" 
				android:layout_height="50dip" 
				android:layout_centerInParent="true" 
				android:background="@drawable/login" />
		
		</RelativeLayout>

	</LinearLayout>



</ScrollView>
